# python-project-52

./: .gitignore  Makefile  README.md  build.sh  db.sqlite3  pyproject.toml  setup.cfg
.github/workflows/: CI.yml
task_manager/: __init__.py  forms.py  mixins.py  models.py  settings.py  urls.py  views.py
task_manager/labels/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/tests/: test_views.py
task_manager/statuses/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses/tests/: test_views.py
task_manager/tasks/: admin.py  filters.py  forms.py  mixins.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py
task_manager/tasks/tests/: test_filters.py  test_views.py
task_manager/templates/: about.html  base.html  footer.html  header.html  index.html  login.html  users_create.html
task_manager/templates/labels/: labels_create.html  labels_delete.html  labels_index.html  labels_update.html
task_manager/templates/statuses/: statuses_create.html  statuses_delete.html  statuses_index.html  statuses_update.html
task_manager/templates/tasks/: tasks_create.html  tasks_delete.html  tasks_index.html  tasks_show.html  tasks_update.html
task_manager/templates/users/: users_create.html  users_delete.html  users_index.html  users_update.html
task_manager/templatetags/: custom_filters.py
task_manager/users/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
(+12 files in other folders)
