[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Yulian <khantermail@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
python-dotenv = "^1.0.0"
dj-database-url = "^2.1.0"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.9"
django-bootstrap5 = "^23.3"
django-filter = "^23.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
